# fad

./: .gitignore  AGENTS.md  Cargo.toml  DEVELOP.md  Dockerfile  Justfile  README.md  justfile
.config/tracey/: config.styx
.github/workflows/: ci.yml
benches/: canada.rs  citm_catalog.rs  deser_json.rs  deser_postcard.rs  harness.rs  ir_vs_legacy.rs  json.rs  postcard.rs  synthetic.rs  twitter.rs
benches/common/: bench_macros.rs
docs/: architecture.md  jit-debugging.md  postcard-wire-format.md  spec.md
examples/: bench_report.rs  disasm_map_struct.rs  disasm_vec_scalar.rs  disasm_vec_u32.rs  profile_map_struct.rs  profile_string_heavy.rs  profile_string_heavy_serde.rs
issues/: 1.md
kajit/: Cargo.toml
kajit/benches/: canada.rs  citm_catalog.rs  synthetic.rs
kajit/src/: compiler.rs  context.rs  disasm_tests.rs  intrinsics.rs  ir.rs  ir_backend.rs  ir_parse.rs  jit_f64.rs  lib.rs  linearize.rs  regalloc_engine.rs  regalloc_mir.rs  regalloc_mir_parse.rs
kajit/tests/: generated_ir_behavior_corpus.rs  generated_synthetic.rs  postreg_vec_hotpath_corpus.rs
src/: compiler.rs  context.rs  disasm_tests.rs  format.rs  intrinsics.rs  ir.rs  ir_backend.rs  ir_parse.rs  ir_passes.rs  jit_debug.rs  json.rs  json_intrinsics.rs  lib.rs  linearize.rs  malum.rs  postcard.rs  pow10tab.rs  recipe.rs  regalloc_engine.rs  regalloc_mir.rs  regalloc_mir_parse.rs  solver.rs
src/arch/: aarch64.rs  mod.rs  x64.rs
src/snapshots/: fad__disasm_tests__disasm_json_all_scalars_aarch64.snap  fad__disasm_tests__disasm_json_all_scalars_x86_64.snap  fad__disasm_tests__disasm_json_enum_adjacent_aarch64.snap  fad__disasm_tests__disasm_json_enum_adjacent_x86_64.snap  fad__disasm_tests__disasm_json_enum_external_aarch64.snap  fad__disasm_tests__disasm_json_enum_external_x86_64.snap  fad__disasm_tests__disasm_json_enum_internal_aarch64.snap  fad__disasm_tests__disasm_json_enum_internal_x86_64.snap  fad__disasm_tests__disasm_json_enum_untagged_aarch64.snap  fad__disasm_tests__disasm_json_enum_untagged_x86_64.snap  fad__disasm_tests__disasm_json_flatten_aarch64.snap  fad__disasm_tests__disasm_json_flatten_x86_64.snap  fad__disasm_tests__disasm_json_nested_struct_aarch64.snap  fad__disasm_tests__disasm_json_nested_struct_x86_64.snap  fad__disasm_tests__disasm_json_option_aarch64.snap  fad__disasm_tests__disasm_json_option_x86_64.snap  fad__disasm_tests__disasm_json_vec_aarch64.snap  fad__disasm_tests__disasm_json_vec_x86_64.snap  fad__disasm_tests__disasm_postcard_all_scalars_aarch64.snap  fad__disasm_tests__disasm_postcard_all_scalars_x86_64.snap  fad__disasm_tests__disasm_postcard_enum_external_aarch64.snap  fad__disasm_tests__disasm_postcard_enum_external_x86_64.snap  fad__disasm_tests__disasm_postcard_flatten_aarch64.snap  fad__disasm_tests__disasm_postcard_flatten_x86_64.snap  fad__disasm_tests__disasm_postcard_nested_struct_aarch64.snap  fad__disasm_tests__disasm_postcard_nested_struct_x86_64.snap  fad__disasm_tests__disasm_postcard_option_aarch64.snap  fad__disasm_tests__disasm_postcard_option_x86_64.snap  fad__disasm_tests__disasm_postcard_vec_aarch64.snap  fad__disasm_tests__disasm_postcard_vec_x86_64.snap  kajit__disasm_tests__disasm_json_all_scalars_aarch64.snap  kajit__disasm_tests__disasm_json_enum_adjacent_aarch64.snap  kajit__disasm_tests__disasm_json_enum_internal_aarch64.snap  kajit__disasm_tests__disasm_json_option_x86_64.snap  (+6 more)
tests/: generated_ir_opt_corpus.rs  generated_ir_postreg_corpus.rs  generated_synthetic.rs
xtask/: Cargo.toml
(+44 files in other folders)
