[package]
name = "fad"
version = "0.1.0"
edition = "2024"
authors = ["Amos Wenger <amos@bearcove.eu>"]
description = "Fast deserialization in Rust, based on facet reflection"
repository = "https://github.com/bearcove/fad"
license = "MIT OR Apache-2.0"
keywords = ["deserialization", "facet", "reflection", "fast"]
categories = ["encoding", "data-structures"]
readme = "README.md"

[dependencies]
facet = { path = "../facet/facet" }
dynasmrt = "5"
dynasm = "5"

[dev-dependencies]
divan = "0.1"
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
facet-postcard = { path = "../facet/facet-postcard", features = ["jit"] }
facet-format = { path = "../facet/facet-format", features = ["jit"] }

[[bench]]
name = "deser_postcard"
harness = false

[[bench]]
name = "deser_json"
harness = false
