[package]
name = "fad"
version = "0.1.0"
edition = "2024"
authors = ["Amos Wenger <amos@bearcove.eu>"]
description = "Fast deserialization in Rust, based on facet reflection"
repository = "https://github.com/bearcove/fad"
license = "MIT OR Apache-2.0"
keywords = ["deserialization", "facet", "reflection", "fast"]
categories = ["encoding", "data-structures"]
readme = "README.md"

[dependencies]
facet = { git = "https://github.com/facet-rs/facet", branch = "main" }
dynasmrt = "5"
dynasm = "5"

[dev-dependencies]
divan = "0.1"
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
facet-postcard = { git = "https://github.com/facet-rs/facet", branch = "main", features = ["jit"] }
facet-json = { git = "https://github.com/facet-rs/facet", branch = "main", features = ["jit"] }
facet-format = { git = "https://github.com/facet-rs/facet", branch = "main", features = ["jit"] }
yaxpeax-arm = { version = "0.4", default-features = false, features = ["std", "fmt"] }
yaxpeax-x86 = { version = "2", default-features = false, features = ["std", "fmt"] }
yaxpeax-arch = { version = "0.3", default-features = false, features = ["std"] }
brotli = "8"
insta = "1"

[[bench]]
name = "deser_postcard"
harness = false

[[bench]]
name = "deser_json"
harness = false

[[bench]]
name = "canada"
harness = false

[[bench]]
name = "twitter"
harness = false

[[bench]]
name = "citm_catalog"
harness = false
